# autograder-printer-package

package_test/: LICENSE  README.md  setup.cfg
package_test/src/example_pacakge_AUTOGRADER.egg-info/: PKG-INFO  SOURCES.txt
printer_package/: LICENSE  README.md  setup.cfg
printer_package/src/autograder.egg-info/: PKG-INFO  SOURCES.txt
printer_package/src/autograder_vives.egg-info/: PKG-INFO  SOURCES.txt
printer_package/src/printer/: print.py  print.py.save  printer.py
