[metadata]
name = example-pacakge-AUTOGRADER
version = 0.0.1
author = Auto Grader
author_email = author@example.com
description = an example package for autograder
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/vives-projectweek-2022/auto-grader
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
