[metadata]
name = autograder
version = 0.0.1
author = autograder-vives-students
description = a package to send strings to a thermal printer from a pi, via a nucleo.
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/vives-projectweek-2022/auto-grader
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
